--- a/index.html
+++ b/index.html
@@ -137,30 +137,43 @@
         <div class="container">
             <div class="projet">
                 <a href="https://kevinpgn.github.io/proton-page/"><img src="./proton.PNG" alt="proton"></a>
+                <h3>Technologie : HTML, CSS, JavaScript</h3>
+                <h3>Librairie : Slick.js, Jquery</h3>
             </div>
             <div class="projet">
                 <a href="https://kevinpgn.github.io/Fusio-site/"><img src="./fusio.PNG" alt="fusio"></a>
+                <h3>Technologie : HTML, CSS, JavaScript</h3>
+                <h3>Librairie : Slick.js, Jquery</h3>
             </div>
             <div class="projet">
                 <a href="https://kevinpgn.github.io/RecipePageDevChallenge./"><img src="./recipe.PNG" alt="recipe"></a>
+                <h3>Technologie : HTML, CSS</h3>
             </div>
             <div class="projet">
                 <a href="https://kevinpgn.github.io/E-commerce-Page/"><img src="./ecommerce.PNG" alt="ecommerce"></a>
+                <h3>Technologie : HTML, CSS</h3>
             </div>
             <div class="projet">
                 <a href="https://kevinpgn.github.io/Restaurant-site/"><img src="./restaurant.PNG" alt="restaurant"></a>
+                <h3>Technologie : HTML, CSS, JavaScript</h3>
+                <h3>Librairie : AOS, Jquery</h3>
             </div>
             <div class="projet">
                 <a href="https://kevinpgn.github.io/App-Landing/"><img src="./shala.PNG" alt="shala"></a>
+                <h3>Technologie : HTML, CSS, JavaScript</h3>
+                <h3>Librairie : Slick.js, Jquery</h3>
             </div>
             <div class="projet">
                 <a href="https://kevinpgn.github.io/Single-Page-N-2/"><img src="./game.PNG" alt="forge"></a>
+                <h3>Technologie : HTML, CSS, JavaScript</h3>
             </div>
             <div class="projet">
                 <a href="https://kevinpgn.github.io/Single-Page-N-1/"><img src="./sass.PNG" alt="sass"></a>
+                <h3>Technologie : HTML, CSS</h3>
             </div>
             <div class="projet">
                 <a href="https://kevinpgn.github.io/Landing-Page-In-JavaScript-Slider/"><img src="./star.PNG" alt="starbucks"></a>
+                <h3>Technologie : HTML, CSS, JavaScript</h3>
             </div>
         </div>
     </section>
