--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#sec1">Accueil</a>
                 <a href="#profil">Profil</a>
                 <a href="#competence">Compétences</a>
-                <a href="">Projets</a>
+                <a href="#projet">Projets</a>
                 <a href="">Contact</a>
             </div>
         </nav>
@@ -128,7 +128,7 @@
     </section>
 
 
-    <section class="sec4">
+    <section class="sec4" id="projet">
         <div class="title">
             <h1>Mes projets</h1>
             <p>Les projets, une choses importante pour l'apprentissage de l'Informatique, voici des projets que j'ai effectué afin de m'améliorer dans tous les langages du Web</p>
