--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="#profil">Profil</a>
                 <a href="#competence">Compétences</a>
                 <a href="#projet">Projets</a>
-                <a href="">Contact</a>
+                <a href="#contact">Contact</a>
             </div>
         </nav>
     </header>
@@ -183,7 +183,7 @@
     </section>
 
 
-    <section class="sec5">
+    <section class="sec5" id="contact">
         <div class="container">
             <div class="en-tete">
                 <h1>Contact</h1>
@@ -225,7 +225,7 @@
                             <textarea name="message" id="message" cols="30" rows="10"></textarea>
                         </div>
 
-                        <button type="submit" class="submit">Submit</button>
+                        <input type="submit" class="submit" value="Envoyez"></button>
                     </div>
 
     </form>
