--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
         </div>
             
-        <a href="#" class="cv">Télécharger CV</a>
+        <a href="cvF.PNG" class="cv" download>Télécharger CV</a>
         </div>
     </section>
 
